added custom cursor

--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,7 @@ body {
   height: 100%;
   border-radius: 8px;
   transition: all 0.2s ease-out;
+  box-shadow: 0 0 10px 5px blur(5px);
 }
 
 .atvImg-container.over .atvImg-shadow {
@@ -81,7 +82,7 @@ body {
   width: 90%;
   height: 90%;
   transition: all 0.2s ease-out;
-  box-shadow: 0 8px 30px rgba(14, 21, 47, 0.6);
+  box-shadow: 0 8px 30px blur(5px);
 }
 
 .atvImg-shine {
@@ -96,4 +97,23 @@ body {
     rgba(255, 255, 255, 0.25) 0%,
     rgba(255, 255, 255, 0) 60%
   );
+}
+
+/* Custom cursor */
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: blur(10px);
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
